# home_carry_food

./: CMakeLists.txt  CamFace.py  README.md  audio.py  main.py  mainpage.dox  manifest.xml  mave.py  move.py  package.xml
audio_src/: carry_food.dict  carry_food.gram  carry_food.txt
audio_src/module/: module_beep.py  module_pico.py
launch/: ask_order_robot.launch  camera_opencv.launch  carry_food.launch
msg/: PositionValues.msg
