<?xml version="1.0"?>
<package format="2">
  <name>carry_food</name>
  <version>0.0.0</version>
  <description>The carry_food package</description>

  <maintainer email="ri-one@todo.todo">ri-one</maintainer>

  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
